--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/011_v2/d/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/011_v2/d/index.xhtml
@@ -8,7 +8,7 @@
 <ui:composition template="../../../../master/dialog.xhtml">
     <ui:define name="htmlHead">
         <script>
-            var dialogSize = {width: 550, height: 600};
+            var dialogSize = {width: 600, height: 550};
         </script>
         <com:ValidatorScript>
 			nts.uk.ctx.bs.employee.dom.workplace.master.WorkplaceExternalCode
@@ -26,29 +26,28 @@
 
     <ui:define name="content">
         <div id="contents-area">
-				<div data-bind="visible: itemsCount() >= 1">
+				<div data-bind="visible: itemsCount() >= 1" style="padding-top: 15px">
 					<div class="valign-center control-group">
 						<div id="D1_1" data-bind="ntsFormLabel: { required: true }">
 							#{i18n.getText('CMM011_133')}</div>
-						<span data-bind="visible: screenMode == 0" id="D1_2" class="label">
-							#{i18n.getText('CMM011_210')} </span> <span
-							data-bind="visible: screenMode == 1" id="D1_2" class="label">
-							#{i18n.getText('CMM011_310')} </span> 
-						<span id="D1_3" class="label" data-bind="text: selectedCode"></span>
-						<span id="D1_4" class="label" data-bind="text: selectedName"></span>
+						<span data-bind="visible: screenMode == 0" id="D1_2" class="label">#{i18n.getText('CMM011_210')}</span> 
+						<span data-bind="visible: screenMode == 1" id="D1_2" class="label">#{i18n.getText('CMM011_310')}</span>
+						<span class="label" style="padding-left: 10px">:</span> 
+						<span id="D1_3" class="label" style="padding-left: 10px" data-bind="text: selectedCode"></span>
+						<span id="D1_4" class="label" style="padding-left: 10px" data-bind="text: selectedName"></span>
+					</div>
+					<div class="valign-center control-group radio">
+						<div id="D2_1" style="width: 300px;" tabindex="1"
+							data-bind="ntsRadioBoxGroup: {
+				                options: itemList,
+				                optionsValue: 'id',
+				                optionsText: 'name',
+				                value: createMethod,
+				                enable: true}">
+						</div>
 					</div>
 				</div>
-				<div class="radio" data-bind="visible: itemsCount() >= 1">
-					<div id="D2_1" style="width: 300px;" tabindex="1"
-						data-bind="ntsRadioBoxGroup: {
-			                options: itemList,
-			                optionsValue: 'id',
-			                optionsText: 'name',
-			                value: createMethod,
-			                enable: true}">
-					</div>
-				</div>
-				<div class="insert">
+				<div class="input-area">
                     <div class="valign-center control-group">
 						<div data-bind="ntsFormLabel: {  required: true, constraint: 'DepartmentCode' }">#{i18n.getText('CMM011_112')}</div>
 						<input id="A5_2" data-bind="ntsTextEditor: {
@@ -79,7 +78,7 @@
 							name: '#[CMM011_115]',
 							value: genericName,
 							constraint: 'WorkplaceGeneric',
-							option: { width: '512px' },
+							option: { width: '393px' },
 							required: true, enable: true}" />
 					</div>
 					<div class="valign-center control-group">
