cmm011 v2 update code

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/011_v2/c/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/011_v2/c/index.xhtml
@@ -28,7 +28,7 @@
                 </span>
             </div>
             <div class="valign-center control-group" align="center">
-            	<div id="C2_1" tabindex="1" style="width: 354px;"
+            	<div id="C2_1" tabindex="1" style="width: 355px;"
             		data-bind="ntsRadioBoxGroup: {
 		                name: '#CMM011-0_',
 		                options: itemList,
@@ -38,7 +38,7 @@
 		                enable: true}">
 	            </div>
             </div>
-            <button data-bind="ntsHelpButton: {textId: 'Help Button Text', position: 'left top', enable: true }">?</button>
+            <button data-bind="visible: false, ntsHelpButton: {textId: 'Help Button Text', position: 'left top', enable: true }">?</button>
             <div class="valign-center control-group" align="center">
                 <table id="single-list" tabindex="2" 
                 	data-bind="ntsGridList: {
