--- a/nts.uk/uk.mobile/ClientApp/styles/lumen/button.scss
+++ b/nts.uk/uk.mobile/ClientApp/styles/lumen/button.scss
@@ -5,10 +5,12 @@
     padding: 0.282rem 0.5rem;
     border-width: 1px 1px 4px 1px;
     &-lg {
-        padding: 0.5rem 1rem;
+        font-size: 1rem;
+        padding: 0.4rem 1rem;
     }
     &-sm {
-        padding: 0.1rem 0.4rem;
+        font-size: 0.8rem;
+        padding: 0.2rem 0.4rem;
     }
     &-secondary {
         border-color: darken($secondary, 20%);
