update tabs styles

--- a/nts.uk/uk.mobile/ClientApp/views/_documents/html/colormd/index.html
+++ b/nts.uk/uk.mobile/ClientApp/views/_documents/html/colormd/index.html
@@ -1,5 +1,5 @@
 <div id="content" class="cf">
-    <div class="card">
+    <div class="card bg-secondary border-0">
         <ul class="nav nav-tabs card-header">
             <li class="nav-item" v-for="(m, k) in ['background', 'text']">
                 <a class="nav-link text-white" :href="'#' + m" :class="{ 'active': !k }">{{m}}</a>
