--- a/nts.uk/uk.mobile/ClientApp/styles/dashboard.scss
+++ b/nts.uk/uk.mobile/ClientApp/styles/dashboard.scss
@@ -13,8 +13,8 @@
 @import './lumen/label.scss';
 @import './lumen/input.scss';
 @import './lumen/button.scss';
-@import './lumen/tab.scss';
 @import './lumen/navbar.scss';
+@import './lumen/navtab.scss';
 @import './lumen/sidemenu.scss';
 @import './lumen/checkbox.scss';
 @import './lumen/accordion.scss';
