update dialog (info)

--- a/nts.uk/uk.mobile/ClientApp/styles/lumen/modal.scss
+++ b/nts.uk/uk.mobile/ClientApp/styles/lumen/modal.scss
@@ -15,6 +15,114 @@
         display: block;
 
         .modal-dialog {
+            &.modal-info {
+                &.type {
+                    &-info {
+                        .modal-content {
+                            border: 1px solid darken($color: $info, $amount: 25%);
+
+                            .modal {
+                                &-header {
+                                    color: #fff;
+                                    border-radius: 0;
+                                    background-color: darken($color: $info, $amount: 15%);
+                                    border-bottom-color: darken($color: $info, $amount: 25%);
+
+                                    .modal-title {
+                                        &>span {
+                                            &:before {
+                                                content: '\f05a';
+                                                font-family: "Font Awesome 5 Free";
+                                                font-weight: 900;
+                                                margin-right: 5px;
+                                            }
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
+
+                    &-warn {
+                        .modal-content {
+                            border: 1px solid darken($color: $warning, $amount: 25%);
+
+                            .modal {
+                                &-header {
+                                    color: #fff;
+                                    border-radius: 0;
+                                    background-color: darken($color: $warning, $amount: 15%);
+                                    border-bottom-color: darken($color: $warning, $amount: 25%);
+
+                                    .modal-title {
+                                        &>span {
+                                            &:before {
+                                                content: "\f06a";
+                                                font-family: "Font Awesome 5 Free";
+                                                font-weight: 900;
+                                                margin-right: 5px;
+                                            }
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
+
+                    &-error {
+                        .modal-content {
+                            border: 1px solid darken($color: $danger, $amount: 25%);
+
+                            .modal {
+                                &-header {
+                                    color: #fff;
+                                    border-radius: 0;
+                                    background-color: darken($color: $danger, $amount: 15%);
+                                    border-bottom-color: darken($color: $danger, $amount: 25%);
+
+                                    .modal-title {
+                                        &>span {
+                                            &:before {
+                                                content: "\f071";
+                                                font-family: "Font Awesome 5 Free";
+                                                font-weight: 900;
+                                                margin-right: 5px;
+                                            }
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
+
+                    &-confirm {
+                        .modal-content {
+                            border: 1px solid darken($color: $primary, $amount: 25%);
+
+                            .modal {
+                                &-header {
+                                    color: #fff;
+                                    border-radius: 0;
+                                    background-color: darken($color: $primary, $amount: 15%);
+                                    border-bottom-color: darken($color: $primary, $amount: 25%);
+
+                                    .modal-title {
+                                        &>span {
+                                            &:before {
+                                                content: "\f059";
+                                                font-family: "Font Awesome 5 Free";
+                                                font-weight: 900;
+                                                margin-right: 5px;
+                                            }
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+
             &.animated {
                 -webkit-animation-duration: 0.5s;
                 animation-duration: 0.5s;
