KAF018 - fix bug #106964(chưa set constraint cho label.)

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/018/h/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/018/h/index.xhtml
@@ -50,7 +50,7 @@
 							<tr>
 								<!-- H3_1 -->
 								<td>
-									<div data-bind="ntsFormLabel: {required: true}">#{i18n.getText('KAF018_82')}</div>
+									<div data-bind="ntsFormLabel: {required: true,constraint: 'Subject'}">#{i18n.getText('KAF018_82')}</div>
 								</td>
 								<!-- H3_1_1 -->
 								<td><input id="H3_1_1" tabindex="5"
