--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/008/a/ccg008.a.style.css
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/008/a/ccg008.a.style.css
@@ -37,4 +37,16 @@
 .btn-close {
 	min-width: 85px;
 }
+
+#ver4{
+    z-index: 1;
+    margin-left: 1500px;
+    position: absolute;
 }
+
+#setting{
+	margin-top: 10px;
+    margin-right: -165px;
+}
+
+
