--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/011_v2/b/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/011_v2/b/index.xhtml
@@ -52,7 +52,7 @@
 						<span class="label" data-bind="visible: screenMode() == 1 || screenMode() == 2">#{i18n.getText('CMM011_122')}</span>
 						<span class="label" data-bind="visible: screenMode() == 3">#{i18n.getText('CMM011_123')}</span>
 					</div>
-					<div class="valign-center control-group">
+					<div class="valign-center control-group" style="width: 323px;">
 						<div data-bind="ntsFormLabel: {required: true}">#{i18n.getText('CMM011_124')}</div>
 				        <div tabindex="5" id="B3_5" data-bind="ntsDatePicker: {
 							name: '#[CMM011_126]', 
