--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/011_v2/a/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/011_v2/a/index.xhtml
@@ -31,8 +31,8 @@
 		<ui:define name="content">
 			<div id="functions-area">
 				<button id="A1_1" tabindex="1" class="proceed" data-bind="enable: $root.errors.isEmpty, click: registerMaster">#{i18n.getText('CMM011_102')}</button>
-				<button id="A1_2" tabindex="2" data-bind="visible: initMode == 0, click: openWkpDepCreateDialog">#{i18n.getText('CMM011_204')}</button>
-				<button id="A1_2" tabindex="2" data-bind="visible: initMode == 1, click: openWkpDepCreateDialog">#{i18n.getText('CMM011_304')}</button>
+				<button id="A1_2" tabindex="2" data-bind="visible: initMode == 0, click: openWkpDepCreateDialog, enable: configuration().historyId != null">#{i18n.getText('CMM011_204')}</button>
+				<button id="A1_2" tabindex="2" data-bind="visible: initMode == 1, click: openWkpDepCreateDialog, enable: configuration().historyId != null">#{i18n.getText('CMM011_304')}</button>
 				<button id="A1_3" tabindex="3" class="danger" data-bind="click: deleteMaster">#{i18n.getText('CMM011_103')}</button>
 			</div>
 			<div id="contents-area" class="fixed-flex-layout">
