--- a/nts.uk/uk.mobile/ClientApp/views/ccg/007/d/index.html
+++ b/nts.uk/uk.mobile/ClientApp/views/ccg/007/d/index.html
@@ -9,6 +9,7 @@
         </div>
         <fieldset class="login-form">
             <nts-dropdown
+                tabindex='1'
                 v-model="companyCode"
                 v-bind:inline-title="true"
                 name='CCGS07_1'
@@ -24,15 +25,17 @@
             </nts-dropdown>
             
             <nts-text-editor
+                name='CCGS07_2'
+                tabindex='2'
                 v-model="employeeCode"
                 v-bind:inline-title="true"
                 v-bind:show-constraint="false"
-                name='CCGS07_2'
                 v-bind:disabled="disabled"
                 v-bind:show-title="true"
                 v-bind:constraint="validations.employeeCode"
                 v-bind:errors-always="$errors.employeeCode"
-                v-bind:columns="{ title: 'col-md-2', input: 'col-md-4' }" />
+                v-bind:columns="{ title: 'col-md-2', input: 'col-md-4' }"
+                @keyup.enter="sendMail" />
 
             <div class="mb-2">
                 <button class="btn btn-primary btn-lg btn-block" v-click:500="sendMail">{{ 'CCGS07_40' | i18n }}</button>
