--- a/nts.uk/uk.mobile/ClientApp/views/ccg/007/f/index.html
+++ b/nts.uk/uk.mobile/ClientApp/views/ccg/007/f/index.html
@@ -1,5 +1,5 @@
 <div id="sent-mail">
     <div class="text-center page-info"> {{ 'Msg_207' | i18n }}</div>
     <br/><br/>
-    <button class="btn btn-primary btn-block" @click="toLogin">ログイン画面に戻る</button>
+    <button tabindex='2'class="btn btn-primary btn-block" @click="toLogin">ログイン画面に戻る</button>
 </div>
