--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/011_v2/c/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/011_v2/c/index.xhtml
@@ -20,12 +20,12 @@
     <ui:define name="content">
         <div id="contents-area">
             <div class="valign-center control-group">
-                <span id="C1_1" class="label" data-bind="visible: screenMode == 0">
+                <div style="width: 480px" id="C1_1" class="label" data-bind="visible: screenMode == 0">
                     #{i18n.getText('CMM011_207')}
-                </span>
-                <span id="C1_1" class="label" data-bind="visible: screenMode == 1">
+                </div>
+                <div style="width: 480px" id="C1_1" class="label" data-bind="visible: screenMode == 1">
                     #{i18n.getText('CMM011_307')}
-                </span>
+                </div>
             </div>
             <div class="valign-center control-group" align="center">
             	<div id="C2_1" tabindex="1" style="width: 355px;"
