cmm011 v2: update drag tree node & layout

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/011_v2/b/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/011_v2/b/index.xhtml
@@ -47,7 +47,7 @@
 				</div>
 
 				<div class="fixed-flex-layout-right">
-					<div class="valign-center control-group" style="padding-top: 20px">
+					<div class="valign-center control-group" style="width: 323px; padding-top: 20px">
 						<span class="label" data-bind="visible: screenMode() == 0">#{i18n.getText('CMM011_121')}</span>
 						<span class="label" data-bind="visible: screenMode() == 1 || screenMode() == 2">#{i18n.getText('CMM011_122')}</span>
 						<span class="label" data-bind="visible: screenMode() == 3">#{i18n.getText('CMM011_123')}</span>
@@ -64,7 +64,7 @@
 						<span class="label">#{i18n.getText('CMM011_125')}</span>
 						<span class="label" data-bind="text: selectedEndDate"></span>
 					</div>
-					<div class="valign-center control-group" data-bind="visible: screenMode() == 2">
+					<div class="valign-center control-group" data-bind="visible: screenMode() == 2"  style="width: 323px;">
 						<div tabindex="6" data-bind="ntsCheckBox: { checked: copyPreviousConfig }, visible: initMode() == 0">#{i18n.getText('CMM011_206')}</div>
 						<div tabindex="6" data-bind="ntsCheckBox: { checked: copyPreviousConfig }, visible: initMode() == 1">#{i18n.getText('CMM011_306')}</div>
 						<button data-bind="visible: false, ntsHelpButton: {textId: 'Help Button Text', position: 'right center' }">？</button>
