--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/011_v2/d/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/011_v2/d/index.xhtml
@@ -27,7 +27,7 @@
     <ui:define name="content">
         <div id="contents-area">
 				<div data-bind="visible: itemsCount() >= 1" style="padding-top: 15px">
-					<div class="valign-center control-group">
+					<div class="valign-center control-group" style="width: 580px;">
 						<div id="D1_1" data-bind="ntsFormLabel: { required: true }">
 							#{i18n.getText('CMM011_133')}</div>
 						<span data-bind="visible: screenMode == 0" id="D1_2" class="label">#{i18n.getText('CMM011_210')}</span> 
